crates/strider-analyze/tests/snapshots/v3__x86__complex__multi_arg_call_in_branch.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "18" [label="φ XMM0", shape=house, fillcolor="#163030"];
  "11" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v19" [color="#888888", style=dashed];
  "v19" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v20" [color="#888888", style=dashed];
  "v20" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "12" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "12" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "12" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "8" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "23" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "8" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x100000008:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "27" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nEAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "30" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "33" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "36" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "23" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x10000000c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "23" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "10" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x100000010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "41" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "42" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x4012c2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "45" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "47" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "23" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ ST0", shape=house, fillcolor="#163030"];
  "11" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v50" [color="#888888", style=dashed];
  "v50" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v51" [color="#888888", style=dashed];
  "v51" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ EDX", shape=house, fillcolor="#163030"];
  "11" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v52" [color="#888888", style=dashed];
  "v52" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v53" [color="#888888", style=dashed];
  "v53" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ ESI", shape=house, fillcolor="#163030"];
  "11" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "54" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="φ Mem", shape=house, fillcolor="#163030"];
  "11" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "5" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "58" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "59" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x4012b2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "62" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "64" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "23" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "67" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "23" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "69" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "69" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x100000004:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
